# pxe-pilot

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  smoke-tests.ps1
.devcontainer/: DockerFile  README.md  devcontainer.json
.github/workflows/: ci.yml  release.yml
builder/: Dockerfile  entrypoint.sh
builder/scripts/: detect-product.sh  extract-pxe.sh  fetch-iso.sh  prepare-iso.sh  publish.sh
config/hosts/: .gitkeep
docker/: Dockerfile
docs/: answer-files.md  builder-usage.md  builder.md  configuration.md  quickstart.md
docs/deployment/: bare-bones.md  http-only.md  with-netboot.md
docs/plans/: 2026-02-10-cicd-implementation.md  2026-02-10-cicd-pipeline-design.md
examples/: defaults.toml  docker-compose-http-only.yml  docker-compose.yml
examples/answers/: default.toml
examples/answers/hosts/: aa-bb-cc-dd-ee-ff.toml
sandbox/: README.md  Vagrantfile  run-demo.sh  start.ps1
sandbox/config/: default.toml
sandbox/provision/: build-assets.sh  dnsmasq.conf.tpl  docker-compose.sandbox.yml  setup-netboot.sh  setup.sh
sandbox/provision/sandbox-config/: defaults.toml
server/: Dockerfile  requirements.txt  server.py
server/tests/: conftest.py  test_answer.py  test_boot.py  test_hosts.py  test_menu.py
src/pxe_pilot/: __init__.py  __main__.py
z_Archive/2026_02_06/: LICENSE
z_Archive/2026_02_06/docker/: docker-compose.yml
z_Archive/2026_02_06/docs/: netboot-setup.md
z_Archive/2026_02_06/examples/hosts/: aa-bb-cc-dd-ee-ff.toml
z_Archive/2026_02_06/src/pxe_pilot/: answer.py  config.py  server.py
z_Archive/2026_02_06/tests/: __init__.py  test_answer.py  test_config.py  test_server.py
