[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pxe-pilot"
version = "0.1.0"
description = "Composable PXE boot config engine for automated Proxmox VE installs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WisherOps" }
]
keywords = ["pxe", "proxmox", "automation", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
pxe-pilot = "pxe_pilot.__main__:main"

[project.urls]
Homepage = "https://github.com/WisherOps/pxe-pilot"
Repository = "https://github.com/WisherOps/pxe-pilot"
Issues = "https://github.com/WisherOps/pxe-pilot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pxe_pilot"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pxe_pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
